--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,4 +6,6 @@ dependencies:
   github:
     git: https://github.com/fluttercommunity/github.dart.git
   quiver: 0.28.2
+  meta: "^1.1.5"
+  ansicolor: "^0.1.1"
   yaml: "^2.1.14"
