Checks pubspec.yaml for community info instead of seperate file.

--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 organization_name: fluttercommunity
 main_repository_name: community
-repository_config_file_name: COMMUNITY_INFO.yaml
+repository_config_file_name: pubspec.yaml
 markdown_table_name: Packages
 header_text_file_name: _HEADER.md
