--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,17 +1,19 @@
 name: readme_generator
 description: Generates the table for the README for Flutter Community.
-version: 1.0.2
+version: 1.0.3
 maintainer: Jeroen Meijer (@jeroen-meijer)
 ignore: true
 
 environment:
-  sdk: '>=2.0.0 <3.0.0'
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  github: ^4.0.0
-  quiver: ^2.0.0+1
-  meta: "^1.1.5"
+  github: 5.0.0
+  quiver: ^2.1.2+1
+  meta: ^1.1.8
   ansicolor: ^1.0.2
-  yaml: "^2.1.14"
-  crypto: ^2.0.6
-  test: ^1.5.1+1
+  yaml: ^2.2.0
+  crypto: ^2.1.4
+
+dev_dependencies:
+  pedantic: ^1.8.0+1
